# ahkParser

./: .gitignore  CMakeLists.txt  CMakePresets.json  makefile
src/: main.cpp
src/parser/: ahk_parser.hpp  ahk_parser.l  ahk_parser.y
tests/: script.ahk
